# django-telegram-auth

./: .gitignore  manage.py  pyproject.toml  readme.md
sample_api/: apps.py  views.py
telegram_auth/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
